[B] Fix project collection form spacing
Resolves #2976

--- a/client/src/theme/styles/components/global/forms/_form-inputs-secondary.scss
+++ b/client/src/theme/styles/components/global/forms/_form-inputs-secondary.scss
@@ -78,6 +78,10 @@
       font-size: 17px;
     }
 
+    &:last-child {
+      margin-bottom: 0;
+    }
+
     &.space-bottom {
       margin-bottom: 2em;
     }
